# XPM42

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: XPM42.h  XPM42_int.h
src/: xpm_decode.c  xpm_decode_body.c  xpm_decode_header.c  xpm_getline.c
test/: CMakeLists.txt  tests.cpp
test/assets/: simple.xpm42
test/internalTests/: decodebody.cpp  decodebodyfixture.hpp  decodeheader.cpp  getline.cpp
